# froggi

./: .gitignore  Cargo.toml  README.md  grammar.ebnf  sample_markdown.scm  spec.md
client/: Cargo.toml  druid-test.rs  many-clients.rs  render-text.rs  simple_client.rs
client/src/: ast.rs  font.rs  main.rs  style.rs
notes/: display.drawio  some new protocol.txt  something.html
server/: Cargo.toml
server/pages/: hand_written_test_markup.html  long.fml  new_test_markup.fml  old_new_generated_test_markup.html  smile.fml  test_markup.fml
server/pages/html/: generated_test_markup.html  new_test_markup.html  smile.html
server/src/: main.rs
