[package]
name = "froggi-client"
version = "0.1.0"
authors = ["Zack <zphixon@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
froggi = { path = "../library" }
image = "0.23.14"

[[bin]]
name = 'simple_client'
path = 'simple_client.rs'
test = false
