[package]
name = "froggi-client"
version = "0.1.0"
authors = ["Zack <zphixon@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
froggi = { path = "../library" }
druid = "0.7.0"
image = '0.23.14'

[[bin]]
name = 'simple-client'
path = 'simple-client.rs'
test = false

[[bin]]
name = 'many-clients'
path = 'many-clients.rs'
test = false

[[bin]]
name = 'druid-test'
path = 'druid-test.rs'
test = false
